added new templates and .py files for the server side of things

--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -4,6 +4,6 @@
 {% block play %}
     {% for item in video_files %}
 <!--    _blank make it open in a new window -->
-        <p><a target="_blank" href="/{{ video_files }}"> {{ video_files }} </a></p>
+        <p><a target="_blank" href="/{{ item }}"> {{ item }} </a></p>
     {% endfor %}
 {% endblock %}
